# pybind11_vcpkg_not_working

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
